Email UI, Member deletion and UI fixes
Multiple changes, including the following:
= Improve email UI to provide better feedback while waiting for sends
= Add API and button to delete members
= Create new common delete API (which indirectly fixed a bug in the
delete_match API)
= Fix layout issue in member trailing text
= Explicitly add off-white background to TeamData content

--- a/css/team_data.css
+++ b/css/team_data.css
@@ -1,3 +1,6 @@
+.team_data_content {
+	background-color: #F0F0F0;
+}
 input.team_data_button[type="button"],
 input.team_data_edit_button[type="button"],
 input.team_data_button[type="submit"],
@@ -159,4 +162,7 @@ input.team_data_checkbox {
 .ui-widget textarea,
 .ui-widget button {
 	font-family: sans-serif;
+}
+.no-close .ui-dialog-titlebar-close {
+	display: none;
 }
